# brawl

./: .gitmodules  README.md  meson.build
CANDLE/: CANDLE  CANDLEf.c  in.txt
CBARG/: CBARGf.c  in.txt
CHEFSUM/: CHEFSUM  CHEFSUM.cpp
CHEFVOTE/: out.txt
CHPLGNS/: CHPLGNS
COOLING/: COOLINGf.c
ENTEXAM/: ENTEXAM
FCTRL/: FCTRL  FCTRLf.c
FCTRL2/: FCTRL2
FLOW001/: FLOW001  FLOW001.cpp
HOLES/: HOLESf.c
HS08TEST/: out.txt
INTEST/: INTEST
LIKECS01/: LIKECS01.cpp
LIKECS02/: out.txt
MAXCOUNT/: MAXCOUNT  MAXCOUNT.c
MINPERM/: MINPERM.cpp
MUFFINS3/: MUFFINS3  MUFFINS3.c
ORDERS/: ORDERS.cpp
PERMUT2/: PERMUT2
PRPALIN/: PRPALIN  PRPALIN.c
SIMPSTAT/: README.md  SIMPSTAT
TEST/: TESTf.c
TLG/: in.txt
TSORT/: TSORT.c  in.txt  out.txt
codechef/CBARG/: CBARG.c
codechef/CHEFVOTE/: CHEFVOTE.c
codechef/CIELAB/: CIELAB.c
codechef/CLEANUP/: CLEANUP.c
codechef/DOUBLE/: DOUBLE
codechef/LIKECS01/: LIKECS01
codechef/LISDIGIT/: LISDIGIT
codechef/MINPERM/: MINPERM  out.txt
codechef/NUMGAME/: NUMGAME.c
codechef/ORDERS/: out.txt
codechef/TEST/: TEST.c
codechef/TLG/: TLG
snippets/: coins_needed_to_form_a_sum_iterative.cpp  coins_needed_to_form_a_sum_printing_optimal_solution.cpp  dynamic_programming_over_greedy.cpp  implicit_map_addition.cpp  policy_based_structures.cpp  priority_queue_over_multiset.cpp
snippets/dynamic_programming/: knapsack_given_weights_find_all_possible_sums.cpp  least_number_of_coins_needed_to_form_a_sum_iterative_approach.cpp  longest_increasing_subsequence_iterative_approach.cpp  path_in_grid_with_maximum_sum_with_restricted_movement_iterative_approach.cpp  print_least_set_of_coins_needed_to_form_a_sum_iterative_approach.cpp
solutions/codechef/: TSORT.cpp
solutions/codechef/CANDLE/: out.txt
solutions/codechef/CBARG/: CBARG
solutions/codechef/CHPLGNS/: CHPLGNS.c
solutions/codechef/CIELRCPT/: CIELRCPT.c
solutions/codechef/CLEANUP/: CLEANUP
solutions/codechef/COOLING/: COOLING
solutions/codechef/ENTEXAM/: ENTEXAM.cpp
solutions/codechef/FCTRL2/: FCTRL2.c
solutions/codechef/FLOW006/: FLOW006
solutions/codechef/HOLES/: HOLES
solutions/codechef/HS08TEST/: HS08TEST  HS08TEST.c
solutions/codechef/LECANDY/: LECANDY
solutions/codechef/LISDIGIT/: in.txt
solutions/codechef/MINPERM/: in.txt
solutions/codechef/NUMGAME/: NUMGAME
solutions/codechef/ORDERS/: ORDERS  in.txt
solutions/codechef/SIMPSTAT/: SIMPSTAT.cpp
solutions/codechef/SUMTRIAN/: SUMTRIAN  SUMTRIAN.c
solutions/codechef/TEST/: TEST
solutions/codechef/TLG/: TLG.c
solutions/cses/problems/: 01_weird_algorithm.cpp
solutions/leetcode/: 2-add-two-numbers.cpp  3-longest-substring-without-repeating-characters.cpp
sources/codechef/CHEFVOTE/: CHEFVOTE
sources/codechef/CIELAB/: CIELAB
sources/codechef/CIELRCPT/: CIELRCPT
sources/codechef/DOUBLE/: DOUBLE.c
sources/codechef/FCTRL/: out.txt
sources/codechef/FLOW006/: FLOW006.cpp
sources/codechef/INTEST/: INTEST.c
sources/codechef/LECANDY/: LECANDY.c
sources/codechef/LIKECS01/: in.txt
sources/codechef/LIKECS02/: LIKECS02  LIKECS02.cpp
sources/codechef/LISDIGIT/: LISDIGIT.cpp  out.txt
sources/codechef/PERMUT2/: PERMUT2.c
sources/codechef/SIMPSTAT/: out.txt
sources/codechef/TSORT/: TSORT
sources/snippets/: generate_permutations_using_recursion.cpp  generate_subsets_using_recursion.cpp
sources/snippets/dynamic_programming/: least_number_of_coins_needed_to_form_a_sum_recursive_approach.cpp  number_of_ways_to_form_a_sum_given_set_of_coins.cpp  path_in_grid_with_maximum_sum_with_restricted_movement_recursive_approach.cpp
util/: gtest_stdio_compare.cpp  gtest_stdio_compare.h
